--- a/err.html
+++ b/err.html
@@ -16,7 +16,7 @@
         font-weight: bold;
         font-style: inherit;
         font-size: x-large;
-        background:#ffffff;
+        background:#fa8181;
 
 	}
 	.modal-login {
