--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		font-family: 'Varela Round', sans-serif;
         font-weight: bold;
         font-style: inherit;
-        font-size: x-large;
+        font-size: xx-large;
         background:#202b38;
 
 	}
