--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 			</div>
 			<div class="modal-body">
-				<form action="logina.php" method="post">
+				<form action="logina.php" method="POST">
 					<div class="form-group">
 						<i class="fa fa-user"></i>
 						<input type="text" class="form-control" placeholder="Username" required="required">
