--- a/details.html
+++ b/details.html
@@ -112,7 +112,7 @@
             <input type="text" class="form-control" name="l_name" placeholder="Last Name" required="required">
         </div>
 		<div class="form-group">
-            <input type="tel" id="phone" name="phno" placeholder="1232345678" pattern="[0-9]{10}" required><br><br>
+            <input type="tel" id="phone" name="phno" placeholder="10-digit no" pattern="[0-9]{10}" required><br><br>
         </div>  
         <div class="form-group">
             <input type="email" id="email" name="email">
