--- a/register.html
+++ b/register.html
@@ -113,7 +113,19 @@
         </div>
 		<div class="form-group">
             <input type="password" class="form-control" name="confirm_password" placeholder="Confirm Password" required="required">
-        </div>        
+        </div>    
+        <div class="form-group">
+            <input type="text" class="form-control" name="f_name" placeholder="First Name" required="required">	
+        </div>
+		<div class="form-group">
+            <input type="text" class="form-control" name="l_name" placeholder="Last Name" required="required">
+        </div>
+		<div class="form-group">
+            <input type="tel" id="phone" name="phno" placeholder="10-digit Phone no" pattern="[0-9]{10}" required><br><br>
+        </div>  
+        <div class="form-group">
+            <input type="email" id="email" placeholder="Email" name="email">
+        </div>    
 		<div class="form-group">
             <button type="submit" class="btn btn-success btn-lg btn-block">Register Now</button>
         </div>
