--- a/register.html
+++ b/register.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
-<title>Bootstrap Simple Registration Form</title>
+<title>Registration Form</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -121,11 +121,26 @@
             <input type="text" class="form-control" name="l_name" placeholder="Last Name" required="required">
         </div>
 		<div class="form-group">
-            <input type="tel" id="phone" name="phno" placeholder="10-digit Phone no" pattern="[0-9]{10}" required><br><br>
+            <input type="tel" class="form-control" id="phone" name="phno" placeholder="10-digit Phone no" pattern="[0-9]{10}" required>
         </div>  
         <div class="form-group">
-            <input type="email" id="email" placeholder="Email" name="email">
+            <input type="email" class="form-control" id="email" placeholder="Email" name="email">
         </div>    
+		<div class="form-group">
+            <input type="text" class="form-control" name="qal" placeholder="Qualification- UG or PG" required="required">
+        </div>
+		<div class="form-group">
+            <input type="text" class="form-control" name="skills" placeholder="Skills- C++ ,etc" required="required">
+        </div>
+		<div class="form-group">
+            <input type="number" class="form-control" name="age" placeholder="Age" required="required">
+        </div>
+		<div class="form-group">
+            <input type="text" class="form-control" name="gender" placeholder="Gender" required="required">
+        </div>
+		<div class="form-group">
+            <input type="text" class="form-control" name="p_exp" placeholder="Pro Experience" required="required"><br><br>
+        </div>
 		<div class="form-group">
             <button type="submit" class="btn btn-success btn-lg btn-block">Register Now</button>
         </div>
