--- a/addjobs.html
+++ b/addjobs.html
@@ -102,44 +102,17 @@
 </head>
 <body>
 <div class="signup-form">
-    <form action="insert.php" method="post">
+    <form action="insj.php" method="post">
 		<h2>Register</h2>
 		<p class="hint-text">Create your account. It's free and only takes a minute.</p>
         <div class="form-group">
-            <input type="text" class="form-control" name="username" placeholder="Username" required="required">	
+            <input type="text" class="form-control" name="j_title" placeholder="Job Title" required="required">	
         </div>
 		<div class="form-group">
-            <input type="password" class="form-control" name="password" placeholder="Password" required="required">
+            <input type="text" class="form-control" name="loca" placeholder="Location" required="required">
         </div>
 		<div class="form-group">
-            <input type="password" class="form-control" name="confirm_password" placeholder="Confirm Password" required="required">
-        </div>    
-        <div class="form-group">
-            <input type="text" class="form-control" name="f_name" placeholder="First Name" required="required">	
-        </div>
-		<div class="form-group">
-            <input type="text" class="form-control" name="l_name" placeholder="Last Name" required="required">
-        </div>
-		<div class="form-group">
-            <input type="tel" class="form-control" id="phone" name="phno" placeholder="10-digit Phone no" pattern="[0-9]{10}" required>
-        </div>  
-        <div class="form-group">
-            <input type="email" class="form-control" id="email" placeholder="Email" name="email">
-        </div>    
-		<div class="form-group">
-            <input type="text" class="form-control" name="qal" placeholder="Qualification- UG or PG" required="required">
-        </div>
-		<div class="form-group">
-            <input type="text" class="form-control" name="skills" placeholder="Skills- C++ ,etc" required="required">
-        </div>
-		<div class="form-group">
-            <input type="number" class="form-control" name="age" placeholder="Age" required="required">
-        </div>
-		<div class="form-group">
-            <input type="text" class="form-control" name="gender" placeholder="Gender- M or F or O" required="required">
-        </div>
-		<div class="form-group">
-            <input type="text" class="form-control" name="p_exp" placeholder="Pro Experience" required="required"><br><br>
+            <input type="number" class="form-control" name="sal" placeholder="salary" required="required">
         </div>
 		<div class="form-group">
             <button type="submit" class="btn btn-success btn-lg btn-block">Register Now</button>
