--- a/addjobs.html
+++ b/addjobs.html
@@ -103,8 +103,7 @@
 <body>
 <div class="signup-form">
     <form action="insj.php" method="post">
-		<h2>Register</h2>
-		<p class="hint-text">Create your account. It's free and only takes a minute.</p>
+		<h2>ADD JOBS</h2>
         <div class="form-group">
             <input type="text" class="form-control" name="j_title" placeholder="Job Title" required="required">	
         </div>
@@ -115,10 +114,9 @@
             <input type="number" class="form-control" name="sal" placeholder="salary" required="required">
         </div>
 		<div class="form-group">
-            <button type="submit" class="btn btn-success btn-lg btn-block">Register Now</button>
+            <button type="submit" class="btn btn-success btn-lg btn-block">Submit</button>
         </div>
     </form>
-	<div class="text-center">Already have an account? <a href="index.html">Sign in</a></div>
 </div>
 </body>
 </html>
