--- a/addjobs.html
+++ b/addjobs.html
@@ -111,6 +111,9 @@
             <input type="text" class="form-control" name="loca" placeholder="Location" required="required">
         </div>
 		<div class="form-group">
+            <input type="text" class="form-control" name="req" placeholder="Requirements- UG or PG" required="required">
+        </div>
+		<div class="form-group">
             <input type="number" class="form-control" name="sal" placeholder="salary" required="required">
         </div>
 		<div class="form-group">
