--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
 				<form action="logine.php" method="post">
 					<div class="form-group">
 						<i class="fa fa-user"></i>
-						<input type="text" class="form-control" placeholder="Username" required="required">
+						<input type="text" class="form-control" name="username" placeholder="Username" required="required">
 					</div>
 					<div class="form-group">
 						<i class="fa fa-lock"></i>
-						<input type="password" class="form-control" placeholder="Password" required="required">					
+						<input type="password" class="form-control" name="password" placeholder="Password" required="required">					
 					</div>
 					<div class="form-group">
 						<input type="submit" class="btn btn-primary btn-block btn-lg" value="Login">
@@ -151,11 +151,11 @@
 				<form action="logina.php" method="POST">
 					<div class="form-group">
 						<i class="fa fa-user"></i>
-						<input type="text" class="form-control" placeholder="Username" required="required">
+						<input type="text" class="form-control" name="username" placeholder="Username" required="required">
 					</div>
 					<div class="form-group">
 						<i class="fa fa-lock"></i>
-						<input type="password" class="form-control" placeholder="Password" required="required">					
+						<input type="password" class="form-control" name="password" placeholder="Password" required="required">					
 					</div>
 					<div class="form-group">
 						<input type="submit" class="btn btn-primary btn-block btn-lg" value="Login">
