--- a/register.html
+++ b/register.html
@@ -127,7 +127,10 @@
             <input type="email" class="form-control" id="email" placeholder="Email" name="email">
         </div>    
 		<div class="form-group">
-            <input type="text" class="form-control" name="qal" placeholder="Qualification- UG or PG" required="required">
+			<input type="radio" id="Postgraduate" name="degree" value="PG" required="required">
+    <label for="Postgraduate">Postgraduate</label><br>
+    <input type="radio" id="Undergraduate" name="degree" value="UG">
+    <label for="Undergraduate">Undergraduate</label><br>
         </div>
 		<div class="form-group">
             <input type="text" class="form-control" name="skills" placeholder="Skills- C++ ,etc" required="required">
@@ -136,10 +139,16 @@
             <input type="number" class="form-control" name="age" placeholder="Age" required="required">
         </div>
 		<div class="form-group">
-            <input type="text" class="form-control" name="gender" placeholder="Gender- M or F or O" required="required">
+			<input type="radio" id="Male" name="gender" value="M" required="required">
+			<label for="male">Male</label><br>
+			<input type="radio" id="Female" name="gender" value="F">
+			<label for="female">Female</label><br>
+			<input type="radio" id="Other" name="gender" value="O">
+			<label for="other">Other</label>
         </div>
+
 		<div class="form-group">
-            <input type="text" class="form-control" name="p_exp" placeholder="Pro Experience" required="required"><br><br>
+            <input type="number" class="form-control" name="p_exp" placeholder="Pro Experience" required="required"><br><br>
         </div>
 		<div class="form-group">
             <button type="submit" class="btn btn-success btn-lg btn-block">Register Now</button>
