--- a/register.html
+++ b/register.html
@@ -11,7 +11,12 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> 
 <style>
-	body {
+
+body {
+      margin-top: 20px;
+      background: rgb(94, 95, 134);
+    }
+	/* body {
 		color: #fff;
 		background: #63738a;
 		font-family: 'Roboto', sans-serif;
@@ -97,7 +102,7 @@
 	}	
 	.signup-form form a:hover{
 		text-decoration: underline;
-	}  
+	}   */
 </style>
 </head>
 <body>
