--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         font-weight: bold;
         font-style: inherit;
         font-size: xx-large;
-        background:#202b38;
+        background:#AFEEEE;
 
 	}
 	.modal-login {
@@ -51,7 +51,7 @@
 		padding-left: 40px;
 	}
 	.modal-login .form-control:focus {
-		border-color: #00ce81;
+		border-color: #B0E0E6;
 	}
 	.modal-login .form-control, .modal-login .btn {
 		min-height: 40px;
@@ -67,12 +67,12 @@
 		right: -5px;
 	}
 	.modal-login .btn {
-		background: #00ce81;
+		background: #B0E0E6;
 		border: none;
 		line-height: normal;
 	}
 	.modal-login .btn:hover, .modal-login .btn:focus {
-		background: #00bf78;
+		background: #48D1CC;
 	}
 	.modal-login .modal-footer {
 		background: #ecf0f1;
