--- a/index.html
+++ b/index.html
@@ -231,13 +231,13 @@
         <div class="row">
           <div class="col-lg-2 col-sm-6">
             <div class="circle-tile">
-              <a href="#"
+              <a href="#myModal1"
                 ><div class="circle-tile-heading dark-blue">
                   <i class="fa fa-users fa-fw fa-3x"></i></div
               ></a>
               <div class="circle-tile-content dark-blue">
                 <div class="circle-tile-description text-faded">
-                  Employee User
+                  Applicant User
                 </div>
                 <div class="circle-tile-number text-faded"></div>
                 <a
@@ -253,7 +253,7 @@
           <div></div>
           <div class="col-lg-2 col-sm-6">
             <div class="circle-tile">
-              <a href="#"
+              <a href="#myModal"
                 ><div class="circle-tile-heading red">
                   <i class="fa fa-users fa-fw fa-3x"></i></div
               ></a>
@@ -278,7 +278,7 @@
       <div class="modal-dialog modal-login">
         <div class="modal-content">
           <div class="modal-header">
-            <h4 class="modal-title">Employee Login</h4>
+            <h4 class="modal-title">Applicant Login</h4>
             <button
               type="button"
               class="close"
